objects/Estimating_Assumption__c.object
<CustomObject>
    <description>TOOLKIT - This object contains assumptions against any request.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Estimating Assumption</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requet related to the Estimating Assumption</description>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Estimating Assumptions</relationshipLabel>
        <relationshipName>Estimating_Assumptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the Estimating Assumption</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Estimating Assumption</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Estimating Assumption ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimating Assumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>